force-app/main/default/objects/Merchant_Name__c/Merchant_Name__c.object-meta.xml
<CustomObject>
    <label>Merchant Name</label>
    <nameField>
        <displayFormat>Mer-{0000}</displayFormat>
        <label>Merchant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>