force-app/main/default/objects/Merchant_Name__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Merchant Names</relationshipLabel>
    <relationshipName>Merchant_Names</relationshipName>
    <type>Lookup</type>
</CustomField>