force-app/main/default/objects/Merchant_Name__c/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <label>MCC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>