force-app/main/default/objects/Merchant_Name__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <externalId>true</externalId>
    <label>Merchant Name</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>