force-app/main/default/objects/Merchant_Name__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <label>MID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>