force-app/main/default/objects/Merchant_Name__c/fields/Number_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transaction__c</fullName>
    <label>Number of Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>